<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pref_fontsize_defval">1</string>
    <string name="pref_fontsize_key">FontSize_Key</string>
    <string name="pref_fontsize_title">显示字体大小</string>
    <string name="pref_disp_title">显示相关</string>
    <string name="hello">Hello World       NotePadPlus!</string>
    <string name="app_name">爱荳便签</string>
    <string name="addnote_title">日志标题</string>
    <string name="addnote_body">内容</string>
<string name="nonote_tip">您还没有创建任何日志！</string>
<string name="confirm">确定</string>
<string name="notetitle_empty_tip">日志的标题为空，请输入！</string>
<string name="notesave_tip">日志已经被保存！</string>
<string name="notenotsave_tip">写文件出错，日志无法保存！</string>
<string name="notetitle_prefix">title:</string>
<string name="notebody_prefix">body:</string>
<string name="readnotefile_fail_err">读取日志文件失败！</string>
<string name="edit_confirm">保存修改</string>
<string name="cancel">取消</string>
<string name="delnote_title">确认删除该日志？</string>
<string name="about_title">关于</string>
<string name="about_content">版本: 1.0.0     \n作者: 缪华         \n邮箱: miaohua1982@gmail.com</string>
<string name="notefile_path_prefix">/data/data/com.android.hinotes/files/</string>
<string name="endtime">结束时间</string>
<string name="noendtime">无结束时间</string>
<string name="notifytime">提醒时间</string>
<string name="nonotifytime">无提醒时间</string>

<string name="record">录音</string>
<string name="use_enddate">使用结束日期</string>
<string name="use_notifydate">是否使用提醒时间</string>
<string name="notifytimetip">请设置提醒时间：</string>
<string name="endtimetip">请设置结束时间：</string>
<string name="delnote_expire_enddate">在结束日期后自动删除日志</string>
<string name="edit_cancel">取消修改</string>
<string name="ringtypeprompt">提醒类型</string>
<string name="notifytypetip">设置提醒音间隔 :</string>
<string name="notifymusictypetip">提示音音乐 :</string>
<string name="notifymethodtype">提醒方式设置 :</string>
<string name="notifymethodprompt">提醒方式</string>
<string name="notifysettingsavingtip">提醒设置已经保存</string>
<string name="enddatesavingtip">结束日期设置已经保存</string>
<string name="prompt_title">错误提醒</string>
<string name="enddate_expire_tip">结束日期小于当前时间</string>
<string name="notifydate_expire_tip">提醒日期小于当前时间</string>
<string name="enddate_pre_notifydate_tip">结束日期小于提醒日期</string>
<string name="note_notify_title">日志提醒</string>
<string name="notifydismiss_button">取消</string>
<string name="notifyalarm_title">NotePadPlus日志提醒</string>
<string name="notesavingtip">日志修改保存成功！</string>
<string name="input_pwd_tip">请输入新密码:</string>
<string name="input_pwd_again_tip">请确认新密码:</string>
<string name="note_lock_dlg_title">日志加密</string>
<string name="pwderr_title">密码输入错误</string>
<string name="pwderr_prompt">两次密码输入不一致！</string>
<string name="notehaslock_msg">日志已被加锁，可作下列操作</string>
<string name="changenotepwd_title">修改密码</string>
<string name="orignalpwd_tip">请输入原密码:</string>
<string name="clearpwd_tip">解除密码</string>
<string name="orignalpwd_err_prompt">原密码输入错误！</string>
<string name="pwdprompt_title">该日志已经被密码锁定</string>
<string name="pwdprompt_tip">请输入密码进行进一步操作性</string>
<string name="viewstyle_title">请选择视图</string>
<string name="note_lock_clear_title">日志密码解除</string>
<string name="pwdnull_prompt">不能输入空密码！</string>
<string name="syssetting_title">系统设置</string>
<string name="pref_item_fontsize_title">字体大小</string>
<string name="syssetting_key">sys_setting_key</string>

<string name="pref_fullscreen_on">全屏显示</string>
<string name="pref_fullscreen_off">非全屏显示</string>
<string name="pref_fullscreen_option">是否全屏显示日志</string>
<string name="pref_orderby_dlgtitle">排序依据</string>
<string name="pref_orderby_key">OrderBy_Key</string>
<string name="pref_orderby_title">日志排序</string>
<string name="pref_orderby_defval">1</string>
<string name="pref_bgclr_key">BgClr_Key</string>
<string name="pref_bgclr_title">背景颜色</string>
<string name="pref_fullscreen_key">FullScreen_Key</string>
<string name="pref_itemheight_title">日志条目高度</string>
<string name="pref_itemheight_key">ItemHeight_Key</string>
<string name="pref_itemheight_defval">1</string>
<string name="progress_load_msg">日志正在加载中请稍后... ...</string>
<string name="progress_load_title">日志加载</string>
<string name="filter_note_byclr_title">根据颜色过滤日志</string>
<string name="orderby_title">请选择排序规则</string>
<string name="widgetname_4x2">爱荳便签小部件4x2</string>
<string name="widgetname_1x1">爱荳便签小部件1x1</string>
<string name="widget_selnote_title">请选择日志条目</string>

<string name="clrpwd_input_prompt">请输入密码以解除加密:</string>
<string name="setpwd_title">输入密码锁定日志</string>
<string name="shareby_title">请选择发送对象</string>
<string name="note_hasdel_prompt">该日志已经被删除</string>
<string name="addtitle_hint">请输入日志标题</string>
<string name="notifytime_confirm">完成修改</string>
<string name="notifytime_cancel">取消修改</string>
<string name="notifytime_remove">删除闹铃</string>
<string name="clrnum_prompt_format">%1$d 条记录</string>
<string name="typesel_title">日志类型</string>
<string name="checklist_add">添加一条记录</string>
<string name="checklist_item_title">清单内容</string>
<string name="checklist_additem_next">下一条</string>
<string name="checklist_delitem_title">删除</string>
<string name="item_toolong_prompt">条目长度超过了64个字符，请删除部分！</string>
<string name="item_empty_prompt">条目为空，请输入！</string>
<string name="sd_fail_prompt">请检查SD卡是否存在！</string>
<string name="opt_sdfile_err_prompt">操作SD卡文件出错！</string>
<string name="opt_sdfile_success_prompt">已经保存到文件:%1$s </string>
</resources>